--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucid-cardano": "^0.10.11",
     "mongoose": "^8.19.3",
@@ -31,6 +32,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.3",
