--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,7 @@
 {
     "buildCommand": "npm run build",
-    "outputDirectory": "dist",
     "installCommand": "npm install",
+    "outputDirectory": "dist",
     "rewrites": [
         {
             "source": "/assets/(.*)",
@@ -16,7 +16,7 @@
             "destination": "/logo.png"
         },
         {
-            "source": "/(.*)",
+            "source": "/:path*",
             "destination": "/index.html"
         }
     ]
