--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "vite": "^7.2.4"
   },
   "engines": {
