--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,18 +1,9 @@
 {
     "version": 2,
-    "builds": [
+    "routes": [
         {
-            "src": "frontend/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
-        }
-    ],
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
