--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,10 +9,20 @@
             }
         }
     ],
-    "rewrites": [
+    "routes": [
         {
-            "source": "/((?!assets|favicon\\.ico|robots\\.txt).*)",
-            "destination": "/index.html"
+            "src": "/(.*)",
+            "dest": "/index.html",
+            "has": [
+                {
+                    "type": "host",
+                    "value": ".*"
+                }
+            ]
+        },
+        {
+            "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|json))",
+            "dest": "/$1"
         }
     ]
 }
