--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
-    "react-social-icons": "^6.25.0",
-    "stream-browserify": "^3.0.0",
-    "util": "^0.12.5"
+    "react-social-icons": "^6.25.0"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
