--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emurgo/cardano-serialization-lib-browser": "^15.0.3",
     "@heroicons/react": "^2.2.0",
     "framer-motion": "^12.23.24",
     "lucid-cardano": "^0.8.7",
@@ -34,7 +35,8 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "vite": "^7.2.4",
-    "vite-plugin-node-polyfills": "^0.24.0"
+    "vite-plugin-node-polyfills": "^0.24.0",
+    "vite-plugin-wasm": "^3.5.0"
   },
   "engines": {
     "node": ">=18"
