--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,4 +12,4 @@ JWT_SECRET=your_super_secret_key_here
 
 # Cardano Blockfrost API (Preview testnet)
 # Get your key at: https://blockfrost.io
-BLOCKFROST_KEY=previewkgDA0DaboieeTKqUZTqdVpSkerl5fvNi
+BLOCKFROST_KEY=
