--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emurgo/cardano-serialization-lib-browser": "^15.0.3",
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "lucid-cardano": "^0.8.7",
     "lucide-react": "^0.554.0",
