--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,16 @@
     "vite": "^7.2.4",
     "vite-plugin-node-polyfills": "^0.24.0",
     "vite-plugin-wasm": "^3.5.0"
+    ,
+    "vitest": "^1.2.2"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:watch": "vitest"
   },
   "engines": {
     "node": ">=18"
