--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@emurgo/cardano-serialization-lib-browser": "^15.0.3",
@@ -37,17 +39,8 @@
     "globals": "^16.4.0",
     "vite": "^7.2.4",
     "vite-plugin-node-polyfills": "^0.24.0",
-    "vite-plugin-wasm": "^3.5.0"
-    ,
-    "vitest": "^1.2.2"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:watch": "vitest"
+    "vite-plugin-wasm": "^3.5.0",
+    "vitest": "^4.0.15"
   },
   "engines": {
     "node": ">=18"
