--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,12 @@
+# Server & Database
 PORT=5000
 MONGO_URI=mongodb+srv://autofyid_db_user:12345678auto@auto.ofiq5nd.mongodb.net/?appName=Auto
 JWT_SECRET=autofy_super_secret_key
 
+# Cardano / Blockfrost
+BLOCKFROST_API_KEY=mainnetCBZpPTSj2IZMtlcMb3OzZZLtymZlF247
+POLICY_ID=your_policy_id
+POLICY_SCRIPT_PATH=./backend/policy/policy.script
+POLICY_KEY_PATH=./backend/policy/policy.skey
+NETWORK=mainnet
+CARDANO_CLI_PATH=cardano-cli
