--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@blockfrost/blockfrost-js": "^6.1.0",
     "@emailjs/nodejs": "^5.0.2",
+    "@emurgo/cardano-serialization-lib-nodejs": "^15.0.3",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
@@ -22,11 +24,12 @@
     "dotenv": "^17.2.3",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucid-cardano": "^0.10.11",
     "mongoose": "^8.19.3",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "@types/helmet": "^0.0.48",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.3",
     "jest": "^29.7.0",
