--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,10 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "engines": {
+    "node": "20.x"
+}
   },
   "keywords": [],
   "author": "",
