--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,4 @@ POLICY_SCRIPT_PATH=./backend/policy/policy.script
 POLICY_KEY_PATH=./backend/policy/policy.skey
 NETWORK=mainnet
 CARDANO_CLI_PATH=cardano-cli
+BLOCKFROST_IPFS_KEY=ipfsXdalE1gVvGPwPTegcZYo6NxkDpmFWnC5
