Final update on minting car identity

--- a/backend/.env
+++ b/backend/.env
@@ -1,13 +1,13 @@
-# Server & Database
-PORT=5000
-MONGO_URI=mongodb+srv://autofyid_db_user:12345678auto@auto.ofiq5nd.mongodb.net/?appName=Auto
-JWT_SECRET=autofy_super_secret_key
+# Server & Database 
+PORT=5000 
+MONGO_URI=mongodb+srv://autofyid_db_user:12345678auto@auto.ofiq5nd.mongodb.net/?appName=Auto JWT_SECRET=autofy_super_secret_key
 
 # Cardano / Blockfrost
-BLOCKFROST_API_KEY=mainnetCBZpPTSj2IZMtlcMb3OzZZLtymZlF247
-POLICY_ID=your_policy_id
+BLOCKFROST_PROJECT_ID=preprodje3rajrlyrIdnF4CN8i3UeNqICrbmQMK
+POLICY_ID=c686eeaa5b3302bdc47a1569b9f4d639d8566de6685cfa3ab7116251
 POLICY_SCRIPT_PATH=./backend/policy/policy.script
 POLICY_KEY_PATH=./backend/policy/policy.skey
-NETWORK=mainnet
+NETWORK=testnet-magic-2
 CARDANO_CLI_PATH=cardano-cli
+SERVER_WALLET_ADDRESS=<YOUR_BACKEND_WALLET_ADDRESS_HERE>
 BLOCKFROST_IPFS_KEY=ipfsXdalE1gVvGPwPTegcZYo6NxkDpmFWnC5
