Adde new variables

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,6 @@
-# Server & Database
-PORT=5000
-MONGO_URI=mongodb+srv://autofyid_db_user:12345678auto@auto.ofiq5nd.mongodb.net/?appName=Auto
-JWT_SECRET=autofy_super_secret_key
+# Server & Database 
+PORT=5000 
+MONGO_URI=mongodb+srv://autof:120904@autofy.so4m3ff.mongodb.net/?appName=AutofyJWT_SECRET=autofy_super_secret_key
 
 # Cardano / Blockfrost
 BLOCKFROST_PROJECT_ID=preprodje3rajrlyrIdnF4CN8i3UeNqICrbmQMK
