--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
     "vite": "^7.2.4",
     "vite-plugin-node-polyfills": "^0.24.0",
     "vite-plugin-wasm": "^3.5.0",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.15",
+    "jsdom": "^24.0.0"
   },
   "engines": {
     "node": ">=18"
